libs/ui/tool/kis_tool_freehand_helper.h
@@ -151,7 +151,6 @@ private:
 private Q_SLOTS:
     void finishStroke();
     void doAirbrushing();
-    void doAsynchronousUpdate(bool forceUpdate = false);
     void stabilizerPollAndPaint();
     void slotSmoothingTypeChanged();
 
